# lineage

./: .env  .gitignore  AGENT_SYSTEM.md  ANNOUNCEMENT.md  BOOK_OUTLINE.md  CHANGELOG.md  CODE_ARCHITECTURE.md  CODE_OF_CONDUCT.md  COINMARKETCAP_INTEGRATION.md  COINMARKETCAP_QUICK_START.md  COMMUNITY_GOVERNANCE.md  CONTRIBUTING.md  CRATES_IO_PUBLICATION_GUIDE.md  CRATES_IO_README.md  Cargo.toml  DELIVERY_COMPLETE.md  DEPLOYMENT_COMPLETE.md  DESCENDANCY_AND_SEAL.md  DOCTRINE.md  EXAMPLES.md  EXTENSION_PROTOCOL.md  FEEDBACK.md  FINAL_SUMMARY.md  FINANCE_GETTING_STARTED.md  FINANCE_IMPLEMENTATION_ROADMAP.md  FREEZE.md  GITHUB_DEPLOYMENT_CHECKLIST.md  GITHUB_DETAILS_UPDATE.md  GRAVEYARD_GUIDE.md  GRAVEYARD_INDEX.md  GRAVEYARD_TESTING.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INTERACTIVE_ARENA_FINAL.md  INTERACTIVE_ARENA_GUIDE.md  INTERACTIVE_ARENA_VISUALS.txt  LIBRARY_COMPLETE.md  LICENSE  LINEAGE_VISIBILITY.md  MANIFESTO.md  (+62 more)
.lineage/keys/: tombstone.key
apps/: README.md
apps/governance-ops/: Cargo.toml  README.md
apps/governance-ops/src/: main.rs
apps/governance-ops/web/: app.js  index.html  styles.css
examples/: DASHBOARD_SETUP.md  TRUST_SCORE_DASHBOARD_README.md  app.js  arena_with_live_market.rs  colors.rs  consensus_arena_tui.rs  dashboard.html  decentralized_trading_agent.rs  descendancy_demo.rs  distributed_consensus_voting.rs  ethical_decision_wrapper.rs  ghost_in_the_machine.rs  governance_dashboard.html  governance_ws_broadcast.rs  graveyard_inspector.rs  interactive_consensus_arena.rs  lifecycle_demo.rs  market_data_integration.rs  metrics_server.rs  metrics_server_v2.rs  ml_finance_integration.rs  ml_learning_advanced.rs  mortality.rs  multi_agent_competition.rs  permadeath_adventurers.rs  persistent_audit_daemon.rs  phase3_training_with_evolution.rs  provenance_chain_demo.rs  provenance_recall_sim.rs  serve_dashboard.py  training_loop_example.rs  trust_score_dashboard.rs  validate_ml_learning.rs  ws_broadcast.rs  ws_broadcast_v2.rs  ws_client.rs
programs/lineage-finance/: Cargo.toml  QUICKSTART.md  README.md
programs/lineage-finance/src/: lib.rs
src/: agent.rs  behavior.rs  graveyard.rs  identity.rs  lib.rs  lineage.rs  main.rs  memory.rs  metabolism.rs  scar.rs  trust.rs
src/finance/: advanced.rs  agent.rs  arena.rs  data_providers.rs  market_data.rs  metrics.rs  mod.rs  scars.rs  spawning.rs  trade.rs  traits.rs  trust_scoring.rs  visualization.rs
src/finance/ml/: agent_integration.rs  errors.rs  market_data.rs  mod.rs  traits.rs
src/finance/ml/evolution/: mod.rs  mutation.rs
src/finance/ml/integration/: adapter.rs  agent_lifecycle.rs  mod.rs
src/finance/ml/models/: base.rs  mod.rs  q_net.rs
src/governance/: council.rs  ledger.rs  mod.rs  proposal.rs  vote.rs
src/provenance/: asset.rs  events.rs  mod.rs  vault.rs  verify.rs
(+7 files in other folders)
