[package]
name = "lineage-rs"
version = "0.2.2"
edition = "2024"
authors = ["Lineage Project"]
description = "Software identity preserved through irreversible change"
readme = "CRATES_IO_README.md"
repository = "https://github.com/sisilabsai/lineage"
documentation = "https://docs.rs/lineage-rs"
homepage = "https://github.com/sisilabsai/lineage"
keywords = ["identity", "consequence", "immutable", "permanent", "trustworthy"]
categories = ["development-tools", "simulation"]
license = "MIT"
exclude = [
    "*.md",
    "!README.md",
    "!CRATES_IO_README.md",
    "*.png",
    "*.csv",
    "*.log",
    ".github/",
    "docs/",
    ".git*",
    ".lineage/",
    "libs/",
    "target/",
    "examples/",
]

[lib]
name = "lineage"
path = "src/lib.rs"

[[bin]]
name = "lineage"
path = "src/main.rs"

[dependencies]
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
ratatui = "0.26"
crossterm = "0.27"
hmac = "0.12"
hex = "0.4"
clap = { version = "4.4", features = ["derive"] }
plotters = "0.3"
gif = "0.13"
image = "0.24"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
governor = "0.10"
dotenv = "0.15"
thiserror = "1.0"
async-trait = "0.1"
ndarray = { version = "0.15", optional = true }
ndarray-rand = { version = "0.14", optional = true }
rand_distr = "0.4"
tokio-tungstenite = "0.21"
futures-util = "0.3"
hyper = { version = "0.14", features = ["full"] }

[features]
default = []
ml = ["ndarray", "ndarray-rand"]
